data/derived/comb/progs/unify/prog2247.ml.out
Characters 69-70:
  if x then
     ^
Error: This expression has type int but an expression was expected of type
         bool
